Added run script